// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBarComponent renders correctly with SelectionMode and SingleItemSelected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ActionBarComponent
    isSelectionMode={false}
    isSingleItemSelected={true}
    selectionModeActions={
      Array [
        TabBarActionModel {
          "actionName": "Action 1",
          "callback": [MockFunction],
          "icon": "icon",
          "id": 3,
        },
        TabBarActionModel {
          "actionName": "Action 2",
          "callback": [MockFunction],
          "icon": "icon",
          "id": 4,
        },
        TabBarActionModel {
          "actionName": "Action 3",
          "callback": [MockFunction],
          "icon": "icon",
          "id": 5,
        },
        TabBarActionModel {
          "actionName": "Action 3",
          "callback": [MockFunction],
          "icon": "icon",
          "id": 6,
        },
      ]
    }
    tapBarActions={
      Array [
        TabBarActionModel {
          "actionName": "Action 1",
          "callback": [MockFunction],
          "icon": "icon",
          "id": 0,
        },
        TabBarActionModel {
          "actionName": "Action 2",
          "callback": [MockFunction],
          "icon": "icon",
          "id": 1,
        },
        TabBarActionModel {
          "actionName": "Action 3",
          "callback": [MockFunction],
          "icon": "icon",
          "id": 2,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "backgroundColor": "#2684FF",
              "borderRadius": 20,
              "flexDirection": "row",
              "height": 102,
              "justifyContent": "space-around",
              "width": 710,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "height": 100,
                "justifyContent": "center",
                "paddingVertical": 20,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
            >
              <Image
                source="icon"
                style={
                  Object {
                    "height": 60,
                    "width": 60,
                  }
                }
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "gray",
                  "borderLeftWidth": 2,
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
            >
              <Image
                source="icon"
                style={
                  Object {
                    "height": 60,
                    "width": 60,
                  }
                }
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "gray",
                  "borderLeftWidth": 2,
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
            >
              <Image
                source="icon"
                style={
                  Object {
                    "height": 60,
                    "width": 60,
                  }
                }
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "gray",
                  "borderLeftWidth": 2,
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
            >
              <Image
                source="icon"
                style={
                  Object {
                    "height": 60,
                    "width": 60,
                  }
                }
              />
            </TouchableOpacity>
          </View>
        </View>,
        null,
      ],
      "style": Array [
        Object {
          "alignItems": "center",
          "bottom": 14,
          "marginHorizontal": 20,
          "position": "absolute",
        },
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>
            </View>,
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "gray",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>
            </View>,
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "gray",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>
            </View>,
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "gray",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>
            </View>,
          ],
          "style": Object {
            "backgroundColor": "#2684FF",
            "borderRadius": 20,
            "flexDirection": "row",
            "height": 102,
            "justifyContent": "space-around",
            "width": 710,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "class",
            "props": Object {
              "children": <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>,
              "style": Object {
                "alignItems": "center",
                "flex": 1,
                "height": 100,
                "justifyContent": "center",
                "paddingVertical": 20,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />,
                "onPress": [MockFunction],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": "icon",
                  "style": Object {
                    "height": 60,
                    "width": 60,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "4",
            "nodeType": "class",
            "props": Object {
              "children": <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>,
              "style": Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "gray",
                  "borderLeftWidth": 2,
                },
              ],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />,
                "onPress": [MockFunction],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": "icon",
                  "style": Object {
                    "height": 60,
                    "width": 60,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "5",
            "nodeType": "class",
            "props": Object {
              "children": <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>,
              "style": Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "gray",
                  "borderLeftWidth": 2,
                },
              ],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />,
                "onPress": [MockFunction],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": "icon",
                  "style": Object {
                    "height": 60,
                    "width": 60,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "6",
            "nodeType": "class",
            "props": Object {
              "children": <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>,
              "style": Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "gray",
                  "borderLeftWidth": 2,
                },
              ],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />,
                "onPress": [MockFunction],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": "icon",
                  "style": Object {
                    "height": 60,
                    "width": 60,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "backgroundColor": "#2684FF",
                "borderRadius": 20,
                "flexDirection": "row",
                "height": 102,
                "justifyContent": "space-around",
                "width": 710,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>
            </View>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "gray",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>
            </View>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "gray",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>
            </View>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "gray",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>
            </View>
          </View>,
          null,
        ],
        "style": Array [
          Object {
            "alignItems": "center",
            "bottom": 14,
            "marginHorizontal": 20,
            "position": "absolute",
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  }
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                >
                  <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </TouchableOpacity>
              </View>,
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "height": 100,
                      "justifyContent": "center",
                      "paddingVertical": 20,
                    },
                    Object {
                      "borderColor": "gray",
                      "borderLeftWidth": 2,
                    },
                  ]
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                >
                  <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </TouchableOpacity>
              </View>,
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "height": 100,
                      "justifyContent": "center",
                      "paddingVertical": 20,
                    },
                    Object {
                      "borderColor": "gray",
                      "borderLeftWidth": 2,
                    },
                  ]
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                >
                  <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </TouchableOpacity>
              </View>,
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "height": 100,
                      "justifyContent": "center",
                      "paddingVertical": 20,
                    },
                    Object {
                      "borderColor": "gray",
                      "borderLeftWidth": 2,
                    },
                  ]
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                >
                  <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </TouchableOpacity>
              </View>,
            ],
            "style": Object {
              "backgroundColor": "#2684FF",
              "borderRadius": 20,
              "flexDirection": "row",
              "height": 102,
              "justifyContent": "space-around",
              "width": 710,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "class",
              "props": Object {
                "children": <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                >
                  <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </TouchableOpacity>,
                "style": Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />,
                  "onPress": [MockFunction],
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": "icon",
                    "style": Object {
                      "height": 60,
                      "width": 60,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "4",
              "nodeType": "class",
              "props": Object {
                "children": <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                >
                  <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </TouchableOpacity>,
                "style": Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "gray",
                    "borderLeftWidth": 2,
                  },
                ],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />,
                  "onPress": [MockFunction],
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": "icon",
                    "style": Object {
                      "height": 60,
                      "width": 60,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "5",
              "nodeType": "class",
              "props": Object {
                "children": <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                >
                  <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </TouchableOpacity>,
                "style": Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "gray",
                    "borderLeftWidth": 2,
                  },
                ],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />,
                  "onPress": [MockFunction],
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": "icon",
                    "style": Object {
                      "height": 60,
                      "width": 60,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "6",
              "nodeType": "class",
              "props": Object {
                "children": <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                >
                  <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </TouchableOpacity>,
                "style": Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "gray",
                    "borderLeftWidth": 2,
                  },
                ],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />,
                  "onPress": [MockFunction],
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": "icon",
                    "style": Object {
                      "height": 60,
                      "width": 60,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ActionBarComponent renders correctly with not SelectionMode and not SingleItemSelected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ActionBarComponent
    isSelectionMode={false}
    isSingleItemSelected={false}
    selectionModeActions={
      Array [
        TabBarActionModel {
          "actionName": "Action 1",
          "callback": [MockFunction],
          "icon": "icon",
          "id": 10,
        },
        TabBarActionModel {
          "actionName": "Action 2",
          "callback": [MockFunction],
          "icon": "icon",
          "id": 11,
        },
        TabBarActionModel {
          "actionName": "Action 3",
          "callback": [MockFunction],
          "icon": "icon",
          "id": 12,
        },
        TabBarActionModel {
          "actionName": "Action 3",
          "callback": [MockFunction],
          "icon": "icon",
          "id": 13,
        },
      ]
    }
    tapBarActions={
      Array [
        TabBarActionModel {
          "actionName": "Action 1",
          "callback": [MockFunction],
          "icon": "icon",
          "id": 7,
        },
        TabBarActionModel {
          "actionName": "Action 2",
          "callback": [MockFunction],
          "icon": "icon",
          "id": 8,
        },
        TabBarActionModel {
          "actionName": "Action 3",
          "callback": [MockFunction],
          "icon": "icon",
          "id": 9,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "backgroundColor": "#2684FF",
              "borderRadius": 20,
              "flexDirection": "row",
              "height": 102,
              "justifyContent": "space-around",
              "width": 710,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "height": 100,
                "justifyContent": "center",
                "paddingVertical": 20,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
            >
              <Image
                source="icon"
                style={
                  Object {
                    "height": 60,
                    "width": 60,
                  }
                }
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "gray",
                  "borderLeftWidth": 2,
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
            >
              <Image
                source="icon"
                style={
                  Object {
                    "height": 60,
                    "width": 60,
                  }
                }
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "gray",
                  "borderLeftWidth": 2,
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
            >
              <Image
                source="icon"
                style={
                  Object {
                    "height": 60,
                    "width": 60,
                  }
                }
              />
            </TouchableOpacity>
          </View>
        </View>,
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 24,
            }
          }
        >
          <Image
            source="ActionBarBottomTriangle.png"
            style={undefined}
          />
        </View>,
      ],
      "style": Array [
        Object {
          "alignItems": "center",
          "bottom": 132,
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>
            </View>,
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "gray",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>
            </View>,
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "gray",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>
            </View>,
          ],
          "style": Object {
            "backgroundColor": "#2684FF",
            "borderRadius": 20,
            "flexDirection": "row",
            "height": 102,
            "justifyContent": "space-around",
            "width": 710,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "7",
            "nodeType": "class",
            "props": Object {
              "children": <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>,
              "style": Object {
                "alignItems": "center",
                "flex": 1,
                "height": 100,
                "justifyContent": "center",
                "paddingVertical": 20,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />,
                "onPress": [MockFunction],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": "icon",
                  "style": Object {
                    "height": 60,
                    "width": 60,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "8",
            "nodeType": "class",
            "props": Object {
              "children": <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>,
              "style": Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "gray",
                  "borderLeftWidth": 2,
                },
              ],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />,
                "onPress": [MockFunction],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": "icon",
                  "style": Object {
                    "height": 60,
                    "width": 60,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "9",
            "nodeType": "class",
            "props": Object {
              "children": <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>,
              "style": Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
                Object {
                  "borderColor": "gray",
                  "borderLeftWidth": 2,
                },
              ],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />,
                "onPress": [MockFunction],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": "icon",
                  "style": Object {
                    "height": 60,
                    "width": 60,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Image
            source="ActionBarBottomTriangle.png"
            style={undefined}
          />,
          "style": Object {
            "alignItems": "center",
            "height": 24,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": "ActionBarBottomTriangle.png",
            "style": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "backgroundColor": "#2684FF",
                "borderRadius": 20,
                "flexDirection": "row",
                "height": 102,
                "justifyContent": "space-around",
                "width": 710,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>
            </View>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "gray",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>
            </View>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "gray",
                    "borderLeftWidth": 2,
                  },
                ]
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <Image
                  source="icon"
                  style={
                    Object {
                      "height": 60,
                      "width": 60,
                    }
                  }
                />
              </TouchableOpacity>
            </View>
          </View>,
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 24,
              }
            }
          >
            <Image
              source="ActionBarBottomTriangle.png"
              style={undefined}
            />
          </View>,
        ],
        "style": Array [
          Object {
            "alignItems": "center",
            "bottom": 132,
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  }
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                >
                  <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </TouchableOpacity>
              </View>,
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "height": 100,
                      "justifyContent": "center",
                      "paddingVertical": 20,
                    },
                    Object {
                      "borderColor": "gray",
                      "borderLeftWidth": 2,
                    },
                  ]
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                >
                  <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </TouchableOpacity>
              </View>,
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "height": 100,
                      "justifyContent": "center",
                      "paddingVertical": 20,
                    },
                    Object {
                      "borderColor": "gray",
                      "borderLeftWidth": 2,
                    },
                  ]
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                >
                  <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </TouchableOpacity>
              </View>,
            ],
            "style": Object {
              "backgroundColor": "#2684FF",
              "borderRadius": 20,
              "flexDirection": "row",
              "height": 102,
              "justifyContent": "space-around",
              "width": 710,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "7",
              "nodeType": "class",
              "props": Object {
                "children": <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                >
                  <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </TouchableOpacity>,
                "style": Object {
                  "alignItems": "center",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "center",
                  "paddingVertical": 20,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />,
                  "onPress": [MockFunction],
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": "icon",
                    "style": Object {
                      "height": 60,
                      "width": 60,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "8",
              "nodeType": "class",
              "props": Object {
                "children": <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                >
                  <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </TouchableOpacity>,
                "style": Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "gray",
                    "borderLeftWidth": 2,
                  },
                ],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />,
                  "onPress": [MockFunction],
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": "icon",
                    "style": Object {
                      "height": 60,
                      "width": 60,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "9",
              "nodeType": "class",
              "props": Object {
                "children": <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                >
                  <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />
                </TouchableOpacity>,
                "style": Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "height": 100,
                    "justifyContent": "center",
                    "paddingVertical": 20,
                  },
                  Object {
                    "borderColor": "gray",
                    "borderLeftWidth": 2,
                  },
                ],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": <Image
                    source="icon"
                    style={
                      Object {
                        "height": 60,
                        "width": 60,
                      }
                    }
                  />,
                  "onPress": [MockFunction],
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": "icon",
                    "style": Object {
                      "height": 60,
                      "width": 60,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Image
              source="ActionBarBottomTriangle.png"
              style={undefined}
            />,
            "style": Object {
              "alignItems": "center",
              "height": 24,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": "ActionBarBottomTriangle.png",
              "style": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
